--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   outline: 0;
   box-sizing: border-box;
   list-style: none;
+  font-size: 100%;
 
 }
 
@@ -11,4 +12,11 @@ body {
   width: 100%;
   min-height: 100vh;
   height: auto;
+}
+
+.boxes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
 }
